--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.6.2",
     "stream-chat": "^8.6.0",
     "stream-chat-react": "^10.8.0",
     "universal-cookie": "^4.0.4",
